--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>com.graphhopper</groupId>
+		    <artifactId>graphhopper</artifactId>
+		    <version>0.6.0</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
