added route to regen graph weights

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 		    <artifactId>graphhopper</artifactId>
 		    <version>0.6.0</version>
 		</dependency>
+		<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20160212</version>
+</dependency>
+		
     </dependencies>
     <build>
         <plugins>
